<resources>
    <string name="app_name">Vita</string>
    <string name="action_login">登录</string>
    <string name="action_logout">注销</string>
    <string name="action_about">关于本软件</string>
    <string name="huodong_time">YYYY-MM-DD HH:MM-HH:MM</string>
    <string name="huodong_price">消费情况</string>
    <string name="title_activity_login">登录</string>
    <string name="forget_password">忘记密码了</string>
    <!-- Strings related to login -->
    <string name="prompt_email">邮箱/手机号</string>
    <string name="prompt_password">密码</string>
    <string name="register_code">验证码</string>
    <string name="action_sign_in">注册或登录</string>
    <string name="action_sign_in_short">登录|注册</string>
    <string name="error_invalid_email">用户名错误</string>
    <string name="error_invalid_password">密码长度太短</string>
    <string name="error_incorrect_password">用户名或密码错误</string>
    <string name="error_field_required">这里忘记填了</string>
    <string name="permission_rationale">"请确保拥有此项权限"</string>
    <string name="take_picture">拍照</string>
    <string name="select_local_picture">选择本地图片</string>
    <string name="cancel">取消</string>
    <string name="internet_fail_connect">网络连接失败?!</string>
    <string name="uploading">正在上传...</string>
    <string name="choose_upload">选择上传图片类型</string>
    <string name="no_more_than_9">对不起，最多只能上传9张图片</string>
    <string name="upload">发表</string>
    <string name="publish_theme_sucess">创建主题成功</string>
    <string name="publish_theme_failure">创建主题失败</string>
    <string name="playing">正在玩</string>
    <string name="detail">详情</string>
    <string name="input_theme_comment_title">请输入标题</string>
    <string name="input_theme_comment_desc">请输入内容</string>
    <string name="yuepai_create">发起约拍/活动</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_title">条目头部</string>
    <string name="content">条目列表内容</string>
    <string name="head_title">条目标题</string>
    <string name="navi_content">按钮布局</string>
    <string name="photo">图片</string>
    <string name="publish_theme_after_login">请先登录</string>
    <string name="upload_photo">上传头像</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="text_login_btn">  登   录</string>
    <string name="new_user">新用户注册</string>
    <string name="yuepainavi1">约模特</string>
    <string name="action_favorite">收藏</string>
    <string name="action_settings">设置</string>
    <string name="inloading">加载中...</string>
    <string name="yuepai_hint">点击翻开查看</string>
    <string name="huodong_location">活动详细地点正在加载......</string>
    <string name="huodong_usrname">加载中...</string>
    <string name="huodong_settime">发表时间</string>
    <string name="huodong_describe">活动描述信息加载中...</string>
    <string name="join_num">报名</string>
    <string name="yuepai_piarse_num">000</string>
    <string name="yuepai_join_num">(000)</string>
    <string name="pull_to_load">下拉加载更多</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="favor">喜欢</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="refreshing">正在获取数据</string>
    <string name="rank_piarse_num">喜欢</string>
    <string name="rank_comment_num">评论</string>
    <string name="text_verify_code">发送验证码</string>
    <string name="yuepai_create_theme">请输入标题</string>
    <string name="yuepai_create_label">添加标签</string>
    <string name="start_time">请选择开始时间</string>
    <string name="end_time">请选择结束时间</string>
    <string name="yuepai_theme_location">请详细描述地点信息</string>
    <string name="yuepai_free">免费</string>
    <string name="yuepai_price">请说明报酬</string>
    <string name="create_yuepai_describe">请输入详细介绍及要求</string>
    <string name="addtag">添加标签</string>
</resources>
